--- a/English_to_Nepali_Translation_with_Hugging_Face_🤗_and_MBart.ipynb
+++ b/English_to_Nepali_Translation_with_Hugging_Face_🤗_and_MBart.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mohansharma077/English_to_Nepali_Translation_with_Hugging_Face_-_and_MBart/blob/main/English_to_Nepali_Translation_with_Hugging_Face_%F0%9F%A4%97_and_MBart.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -556,8 +546,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
